Spacing issues #34, #33
Trim comment field before adding tags, fix #34
Spacing after icons in list-group-items, fix #33

--- a/ocr-gt-tools.styl
+++ b/ocr-gt-tools.styl
@@ -122,6 +122,9 @@ div[contenteditable]
 #page-info
 	position fixed
 	right 0
+	.list-group-item
+		i
+			padding-right: 5px;
 
 #select-bar
 	position fixed
